--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
 
         <li><a href="/recipes">Recipe List</a></li>
-    
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create Recipes and Ingredients<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -29,14 +29,14 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Queries <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/user/all">Find by Users</a></li>
+            <li><a href="/users">Find by Users</a></li>
             <li><a href="/ingredients">Find by Ingredient</a></li>
           </ul>
         </li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/user/new">User Signup</a></li>
+        <li><a href="/users/new">User Signup</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
